# plover-raycaster

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  build.linux  compile_shaders.sh  configure.linux  run.linux
lapwing/: CMakeLists.txt  build.bat  build.linux  compile_commands.json  configure.bat  configure.linux
lapwing/include/: lapwing.h
lapwing/libraries/header_libs/: CMakeLists.txt
lapwing/src/: file_utils.cpp  vox.cpp  vox.h  writer.cpp  writer.h
plover/: CMakeLists.txt
plover/include/plover/: input.h  plover.h  render.h
plover/libraries/header_libs/include/spall/: spall.h
plover/src/: AssetLoader.cpp  AssetLoader.h  DescriptorAllocator.cpp  DescriptorAllocator.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  MessageQueue.h  Renderer.cpp  Renderer.h  Texture.cpp  Texture.h  UI.cpp  UI.h  VulkanContext.cpp  VulkanContext.h  glfw.h  instrument.h  linux_instrument.cpp  linux_plover.cpp  linux_plover.h  plover.cpp  plover_int.h  raycaster.cpp  raycaster.h  ttfRenderer.cpp  ttfRenderer.h  win32_instrument.cpp  win32_plover.cpp  win32_plover.h
resources/: .gitignore  assets.txt
resources/models/: map.vox
resources/shaders/:  raycaster.vert  raycaster.frag  raycaster.vert  shader.frag  shader.vert  ui.frag  ui.vert  wireframe.frag  wireframe.vert
src/: Main.cpp  plover-raycaster.h
